--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -2,13 +2,13 @@
   .banner
     .banner__container
       .banner__title
-        .banner__title-promo АКЦИЯ
-        .banner__title-welcom Приветственный бонус
+        .banner__title-promo PROMOTION
+        .banner__title-welcom welcome bonus
         .banner__title-bonus 4500₴
-        .banner__title-spin 100 фриспинов
+        .banner__title-spin 100 free spins
       .banner__pers
         img(src='img/pers.png' alt='pers')
-    .banner__text Андрей Ярмоленко #[br] #[span бренд-амбассадор]
+    .banner__text Andriy Yarmolenko #[br] #[span brand ambassador]
 
 
 
