--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -56,6 +56,7 @@ body
       margin: 0 0 25px 0
     &-welcom
       font-family: $font-suisse-med
+      align-self: flex-start !important
       font-size: 40px
       line-height: 50px
       color: $grey
